add initial form

--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -8,5 +8,15 @@
 
   <body>
     <h1>Welcome to RPS</h1>
+
+    <form action="/make_move">
+      <select id="move">
+        <option id="rock">Rock</option>
+        <option id="paper">Paper</option>
+        <option id="scissors">Scissors</option>
+      </select>
+      <br/>
+      <input type="submit" value="Make your move!"/>
+    </form>
   </body>
 </html>
