--- a/rock_paper_scissors/index.html
+++ b/rock_paper_scissors/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Welcome to RPS</h1>
 
-    <form action="/make_move">
+    <form action="/make_move" method="POST">
       <select id="move">
         <option id="rock">Rock</option>
         <option id="paper">Paper</option>
