first working version against computer

--- a/rock_paper_scissors/html/index.html
+++ b/rock_paper_scissors/html/index.html
@@ -10,10 +10,10 @@
     <h1>Welcome to RPS</h1>
 
     <form action="/make_move" method="POST">
-      <select id="move">
-        <option id="rock">Rock</option>
-        <option id="paper">Paper</option>
-        <option id="scissors">Scissors</option>
+      <select id="move" name="move">
+        <option value="rock">Rock</option>
+        <option value="paper">Paper</option>
+        <option value="scissors">Scissors</option>
       </select>
       <br/>
       <input type="submit" value="Make your move!"/>
