now it's mandatory to choose a nickname

--- a/rock_paper_scissors/html/index.html
+++ b/rock_paper_scissors/html/index.html
@@ -17,5 +17,9 @@
       <input type="submit" name="move" value="scissors"/>
       <br/>
     </form>
+
+
+    <p/>
+    <a href="/logout">Log out</a>
   </body>
 </html>
